--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,100 @@
-html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin-right: 10px;
+  margin-left: 10px;
+  font-size: 14px;
+  line-height: 1.4;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+em {
+  font-style: italic;
 }
 
-* {
-  box-sizing: border-box;
+body,
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  margin-bottom: 1em;
+}
+
+h1 { font-size: 20px; }
+h2 { font-size: 16px; margin-top: 1em; }
+
+table,
+progress {
+  width: 100%;
+}
+
+th,
+td,
+[type=text],
+textarea {
+  margin-right: 5px;
+  padding: 3px 6px;
+}
+
+th {
+  width: 10%;
+  font-weight: 500;
+  text-align: right;
+  white-space: nowrap;
+  vertical-align: middle;
+}
+
+[type=text],
+textarea {
+  width: 200px;
+  padding: 5px;
+  border: 1px solid darken(#eee, 20);
+  border-radius: 3px;
+  outline: 0;
+}
+
+textarea {
+  height: 100px;
+  font-family: monospace;
+  vertical-align: bottom;
+}
+
+button {
+  margin: 3px;
+  padding: 6px 12px;
+  border: 0;
+  border-radius: 3px;
+  outline: 0;
+  background-color: #eee;
+}
+
+
+.app {
+  margin: auto;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  text-align: center;
+}
+
+.section {
+  display: inline-block;
+  max-width: 480px;
+  margin: 20px;
+  text-align: left;
+  vertical-align: top;
+}
+
+.player-wrapper {
+  width: 480px;
+  height: 270px;
+}
+
+.react-player {
+  margin-bottom: 10px;
+  background: rgba(0, 0, 0, .1);
+}
+
+.faded {
+  color: rgba(0, 0, 0, .5);
+}
+
+.footer {
+  margin: 20px;
 }
